--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>12 fox</title>
+        <title>12 𝓕𝓸𝔁</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-        <link rel="stylesheet" href="/static/css/contact.css">
+        <link rel="icon" href="static\assets\12fox.ico">
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/contact.css')}}" media="all">
     </head>
     <body>
