--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,20 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>12 fox</title>
+        <title>12 𝓕𝓸𝔁</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-        <link rel="stylesheet" href="/static/css/style.css">
+        <link rel="icon" href="static\assets\12fox.ico">
+        <link rel="stylesheet" href="\static\css\style.css">
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}" media="all">
     </head>
     <body>
+      <div class="scroll-up-btn" id="scrollbtn">
+        <i class="ri-arrow-up-double-line"></i>
+      </div>
+
 
       <nav class="nav">
         <i class="uil uil-bars navOpenBtn"></i>
@@ -119,14 +124,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/LX0y3FHZ/men2-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹699</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -139,14 +144,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/9z39mzFB/men1-removebg-preview-2.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹399</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -160,14 +165,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/jSbr7P3Y/men4-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹759</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -180,14 +185,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/nLBZQzkW/men3-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹450</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -200,14 +205,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/156DzxV3/men5-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹599</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -220,14 +225,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/KjgKHLh5/men6-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹499</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -253,14 +258,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/59YT3mRF/women4-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹450</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -273,14 +278,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/65mp2cgb/women5-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹650</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -294,14 +299,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/XYJM60vp/women6-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹599</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -314,14 +319,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/VkZkx8jN/women2-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹599</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -334,14 +339,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/sDQB31gh/women1-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹350</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -354,14 +359,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/HW5N79nW/women3-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹350</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -387,14 +392,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/rmbvLqjq/kid3-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹699</span>
               </div>
               <div class="glassBox__Button">
                 <a href="https://lukkaartsandcrafts.myinstamojo.com/product/4578923/hi-i-am-a-shirt-de769/" data-store-name="lukkaartsandcrafts" data-domain="https://lukkaartsandcrafts.myinstamojo.com" data-id="4578923" rel="im-new-checkout" data-text="BUY" data-css-style=" width:180px; border-radius:4px"   data-layout="vertical"  ></a>
@@ -406,14 +411,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/rF65K7Ys/kid6-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹399</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -427,14 +432,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/43XDZLTF/kid2-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹400</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -447,14 +452,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/KYvJYCpw/kid4-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹299</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -467,14 +472,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/BvbZCQwg/kid1-removebg-preview.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹599</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -487,14 +492,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.ibb.co/s5phbkg/shoe-golden.png" alt="">
+                <img src="https://i.postimg.cc/Jn7g9Pkc/kid5-removebg-preview-1.png" alt="">
                 
                 
               </div>
               <h3 class="glassBox__title">Golden Shoe</h3>
               <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
               <div class="glassBox__price">
-                      <span class="product-price">$99</span>
+                      <span class="product-price">₹499</span>
                       
               </div>
               <div class="glassBox__Button">
@@ -513,7 +518,7 @@
           <div class="left box">
             <div class="upper">
               <div class="topic">About us</div>
-              <p>12Fox is more than a clothing store; we're curators of style, offering curated fashion that empowers individuals to express their unique identity with confidence..</p>
+              <p>12Fox is more than a clothing store, we're curators of style, offering curated fashion that empowers individuals to express their unique identity with confidence..</p>
             </div>
             <div class="lower">
               <div class="topic">Contact us</div>
@@ -556,4 +561,24 @@
     </body>
     <script src="https://manage.instamojo.com/assets/js/pay_button/button.min.js"></script>
     <script src="/static/js/nav.js"></script>
+    <script>
+      let mybutton = document.getElementById("scrollBtn");
+
+      // When the user scrolls down 20px from the top of the document, show the button
+      window.onscroll = function() {scrollFunction()};
+      
+      function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+          mybutton.style.display = "block";
+        } else {
+          mybutton.style.display = "none";
+        }
+      }
+      
+      // When the user clicks on the button, scroll to the top of the document
+      function topFunction() {
+        document.body.scrollTop = 0; // For Safari
+        document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+      }
+    </script>
 </html>
