update shop items

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -100,7 +100,7 @@
                   <input type="hidden" name="_next" value="https://">
                   
                 </div>
-                <input type="hidden" name="_autoresponse" value="Thanks for filling in Visfolio!!.
+                <input type="hidden" name="_autoresponse" value="Thanks for filling in 12Fox!!.
                 Here's what was received.">
               </form>
             </div>
