--- a/templates/index.html
+++ b/templates/index.html
@@ -128,15 +128,16 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">12Fox Classic Hoodie</h3>
+              <div class="glassBox__content">Unleash your style with this signature hoodie.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹699</span>
                       
               </div>
               <div class="glassBox__Button">
-                <a href="https://lukkaartsandcrafts.myinstamojo.com/product/4578923/hi-i-am-a-shirt-de769/" data-store-name="lukkaartsandcrafts" data-domain="https://lukkaartsandcrafts.myinstamojo.com" data-id="4578923" rel="im-new-checkout" data-text="BUY" data-css-style=" width:180px; border-radius:4px"   data-layout="vertical"  ></a>
-                
+          
+                <a href="https://vishvavishva587.myinstamojo.com/product/4804937/mens-midweight-hooded-sweatshirt/" data-store-name="vishvavishva587" data-domain="https://vishvavishva587.myinstamojo.com" data-id="4804937" rel="im-new-checkout" data-text="BUY" data-css-style="width:180px; border-radius:4px"   data-layout="vertical"  ></a>
+
                </div>
             </div>
                 
@@ -148,8 +149,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">Urban Fox Streetwear Tee</h3>
+              <div class="glassBox__content"> Rule the streets with the Urban Fox Tee.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹399</span>
                       
@@ -169,8 +170,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">FoxCrafted Comfort Hoodie</h3>
+              <div class="glassBox__content">Where coziness meets expert craftsmanship.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹759</span>
                       
@@ -189,8 +190,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">WildFox Adventure Shirt</h3>
+              <div class="glassBox__content">Perfect for those who seek style in every journey.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹450</span>
                       
@@ -209,8 +210,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">Arctic Fox Cozy Sweatshirt</h3>
+              <div class="glassBox__content">Delivering coziness without compromising on fashion.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹599</span>
                       
@@ -229,8 +230,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">RetroFox Vintage Tee</h3>
+              <div class="glassBox__content">Combining retro charm with contemporary comfort.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹499</span>
                       
@@ -262,8 +263,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">FoxBreeze Lightweight Jersey</h3>
+              <div class="glassBox__content">A perfect choice for laid-back days and casual outings.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹450</span>
                       
@@ -282,8 +283,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">Urban Fox Essentials</h3>
+              <div class="glassBox__content">Designed for both comfort and streetwear flair.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹650</span>
                       
@@ -303,8 +304,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">FoxEmpire Regal Sweater</h3>
+              <div class="glassBox__content"> A luxurious blend of regality and coziness.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹599</span>
                       
@@ -323,8 +324,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">Midnight Fox Streetwear Hoodie</h3>
+              <div class="glassBox__content">Dominate the streetwear scene with our Midnight Fox hoodie.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹599</span>
                       
@@ -343,8 +344,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">FoxElegance Off-Waist Top</h3>
+              <div class="glassBox__content">Embrace sophistication with the FoxElegance Off-Waist Top.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹350</span>
                       
@@ -363,8 +364,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">FoxChic Tailored T-Shirt</h3>
+              <div class="glassBox__content">Offering a sleek and sophisticated look for every occasion.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹350</span>
                       
@@ -396,8 +397,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">FoxFlex Active Hooded Jacket</h3>
+              <div class="glassBox__content">Keep your little ones warm and stylish with the FoxCub Cozy Hoodie.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹699</span>
               </div>
@@ -415,8 +416,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">FoxPaws Spiderman Pullover</h3>
+              <div class="glassBox__content">A charming addition to your child's wardrobe for everyday fun.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹399</span>
                       
@@ -436,8 +437,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">FoxCub Cozy Hoodie</h3>
+              <div class="glassBox__content">Keep your little ones warm and stylish with the FoxCub Cozy Hoodie.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹400</span>
                       
@@ -456,8 +457,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">FoxTales Batman Tee</h3>
+              <div class="glassBox__content">Encouraging kids to explore the wonders of nature in style.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹299</span>
                       
@@ -476,15 +477,16 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">WildWhiskers Adventure Hoodie</h3>
+              <div class="glassBox__content">Ignite the spirit of adventure with the WildWhiskers Hoodie.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹599</span>
                       
               </div>
               <div class="glassBox__Button">
                        <a href="https://lukkaartsandcrafts.myinstamojo.com/product/4578923/hi-i-am-a-shirt-de769/" data-store-name="lukkaartsandcrafts" data-domain="https://lukkaartsandcrafts.myinstamojo.com" data-id="4578923" rel="im-new-checkout" data-text="Buy" data-css-style=" width:180px; border-radius:4px"   data-layout="vertical"  ></a>
-               </div>
+            
+                      </div>
             </div>
             
         
@@ -496,8 +498,8 @@
                 
                 
               </div>
-              <h3 class="glassBox__title">Golden Shoe</h3>
-              <div class="glassBox__content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae sunt veniam adipisci fugit qui quaerat!</div>
+              <h3 class="glassBox__title">PikaChic Lightning Hoodie</h3>
+              <div class="glassBox__content">Pikachu's charm meets fashion-forward comfort for Pokémon enthusiasts of all ages.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹499</span>
                       
