--- a/templates/index.html
+++ b/templates/index.html
@@ -45,67 +45,67 @@
       <div class="external">
         <div class="horizontal-scroll-wrapper">
           <div class="img-wrapper slower">
-            <a href="https://altphotos.com/photo/stylish-parisian-cafe-terrace-279/" target="_blank" rel="noopener"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/paris-cafe-terrace.jpg" alt="">
+            <a href="https://altphotos.com/photo/stylish-parisian-cafe-terrace-279/" target="_blank" rel="noopener"><img src="https://i.postimg.cc/4x0bwM2C/istockphoto-1293292206-612x612.jpg" alt="">
             </a>
           </div>
       
           <div class="img-wrapper faster">
             <a href="https://altphotos.com/photo/retro-boy-doll-wearing-elegant-clothes-330/" target="_blank" rel="noopener">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/antiquedollboy.jpg" alt="">
+              <img src="https://i.postimg.cc/131y65Pb/Home.png" alt="">
             </a>
           </div>
       
           <div class="img-wrapper slower vertical">
             <a href="https://altphotos.com/photo/clocks-shop-exposition-window-reflecting-the-streets-277/" target="_blank" rel="noopener">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/windowshopclock.jpg" alt="">
+              <img src="https://i.postimg.cc/BbQfNXtn/bee-and-White-Minimalist-Simple-Man-Fashion-Instagram-Reel.png" alt="">
             </a>
           </div>
       
           <div class="img-wrapper slower slower-down">
             <a href="https://altphotos.com/photo/swans-and-ducks-swimming-in-a-river-264/" target="_blank" rel="noopener">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/swanduckriver.jpg" alt="">
+              <img src="https://i.postimg.cc/s2y65bMV/istockphoto-1387390548-612x612.jpg" alt="">
             </a>
           </div>
       
           <div class="img-wrapper">
             <a href="https://altphotos.com/photo/sidewalk-terrace-of-a-blue-facade-cafe-312/" target="_blank" rel="noopener">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/cafe-terrace.jpg" alt="">
+              <img src="https://i.postimg.cc/xjWWcx3d/Home-2.png" alt="">
             </a>
           </div>
       
           <div class="img-wrapper slower">
             <a href="https://altphotos.com/photo/paris-waterfront-at-sunset-1555/" target="_blank" rel="noopener">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/paris-seine-boat.jpg" alt="">
+              <img src="https://i.postimg.cc/JzK6cPZZ/Home-4.png" alt="">
             </a>
           </div>
       
           <div class="img-wrapper faster1">
             <a href="https://altphotos.com/photo/old-man-leaning-over-the-barrier-looking-at-the-river-265/" target="_blank" rel="noopener">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/old-man-river.jpg" alt="">
+              <img src="https://i.postimg.cc/tJHNHxF9/Home-1.png" alt="">
             </a>
           </div>
          
           <div class="img-wrapper slower slower2">
             <a href="https://altphotos.com/photo/cafe-terrace-with-a-row-of-retro-tables-261/" target="_blank" rel="noopener">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/cafe-table-street.jpg" alt="">
+              <img src="https://i.postimg.cc/jS9NbfrB/214850926-presentation-of-mens-clothing-in-a-luxury-boutique-in-a-shopping-center-original-product.jpg" alt="">
                 </a>
            </div>
           
           <div class="img-wrapper">
                 <a href="https://altphotos.com/photo/street-scene-with-pedestrians-and-dogs-318/" target="_blank" rel="noopener">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/street-scene-people.jpg" alt="">
+              <img src="https://i.postimg.cc/Y2st8zfc/Home-5.png" alt="">
             </a>
           </div>
           
           <div class="img-wrapper slower">
              <a href="https://altphotos.com/photo/tourist-barge-on-the-river-seine-near-notre-dame-266/" target="_blank" rel="noopener">
-              <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/notre-dame-river-boat.jpg" alt="">
+              <img src="https://i.postimg.cc/VLZ4Jd8W/Home-3.png" alt="">
             </a>
           </div>
           
           <div class="img-wrapper slower last">
              <a href="https://altphotos.com/photo/skulls-decoration-in-a-shop-window-331/" target="_blank" rel="noopener">
-               <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/74321/shop-window-reflection.jpg" alt="">
+               <img src="https://i.postimg.cc/sX2vGDy5/istockphoto-111957093-612x612.jpg" alt="">
             </a>
           </div>
         </div>
