--- a/templates/index.html
+++ b/templates/index.html
@@ -45,66 +45,67 @@
       <div class="external">
         <div class="horizontal-scroll-wrapper">
           <div class="img-wrapper slower">
-            <a href="https://altphotos.com/photo/stylish-parisian-cafe-terrace-279/" target="_blank" rel="noopener"><img src="https://i.postimg.cc/4x0bwM2C/istockphoto-1293292206-612x612.jpg" alt="">
+            <a href="https://i.postimg.cc/4x0bwM2C/istockphoto-1293292206-612x612.jpg" target="_blank" rel="noopener">
+              <img src="https://i.postimg.cc/4x0bwM2C/istockphoto-1293292206-612x612.jpg" alt="">
             </a>
           </div>
       
           <div class="img-wrapper faster">
-            <a href="https://altphotos.com/photo/retro-boy-doll-wearing-elegant-clothes-330/" target="_blank" rel="noopener">
+            <a href="https://i.postimg.cc/131y65Pb/Home.png" target="_blank" rel="noopener">
               <img src="https://i.postimg.cc/131y65Pb/Home.png" alt="">
             </a>
           </div>
       
           <div class="img-wrapper slower vertical">
-            <a href="https://altphotos.com/photo/clocks-shop-exposition-window-reflecting-the-streets-277/" target="_blank" rel="noopener">
+            <a href="https://i.postimg.cc/BbQfNXtn/bee-and-White-Minimalist-Simple-Man-Fashion-Instagram-Reel.png" target="_blank" rel="noopener">
               <img src="https://i.postimg.cc/BbQfNXtn/bee-and-White-Minimalist-Simple-Man-Fashion-Instagram-Reel.png" alt="">
             </a>
           </div>
       
           <div class="img-wrapper slower slower-down">
-            <a href="https://altphotos.com/photo/swans-and-ducks-swimming-in-a-river-264/" target="_blank" rel="noopener">
+            <a href="https://i.postimg.cc/s2y65bMV/istockphoto-1387390548-612x612.jpg" target="_blank" rel="noopener">
               <img src="https://i.postimg.cc/s2y65bMV/istockphoto-1387390548-612x612.jpg" alt="">
             </a>
           </div>
       
           <div class="img-wrapper">
-            <a href="https://altphotos.com/photo/sidewalk-terrace-of-a-blue-facade-cafe-312/" target="_blank" rel="noopener">
+            <a href="https://i.postimg.cc/xjWWcx3d/Home-2.png" target="_blank" rel="noopener">
               <img src="https://i.postimg.cc/xjWWcx3d/Home-2.png" alt="">
             </a>
           </div>
       
           <div class="img-wrapper slower">
-            <a href="https://altphotos.com/photo/paris-waterfront-at-sunset-1555/" target="_blank" rel="noopener">
+            <a href="https://i.postimg.cc/JzK6cPZZ/Home-4.png" target="_blank" rel="noopener">
               <img src="https://i.postimg.cc/JzK6cPZZ/Home-4.png" alt="">
             </a>
           </div>
       
           <div class="img-wrapper faster1">
-            <a href="https://altphotos.com/photo/old-man-leaning-over-the-barrier-looking-at-the-river-265/" target="_blank" rel="noopener">
+            <a href="https://i.postimg.cc/tJHNHxF9/Home-1.png" target="_blank" rel="noopener">
               <img src="https://i.postimg.cc/tJHNHxF9/Home-1.png" alt="">
             </a>
           </div>
          
           <div class="img-wrapper slower slower2">
-            <a href="https://altphotos.com/photo/cafe-terrace-with-a-row-of-retro-tables-261/" target="_blank" rel="noopener">
+            <a href="https://i.postimg.cc/jS9NbfrB/214850926-presentation-of-mens-clothing-in-a-luxury-boutique-in-a-shopping-center-original-product.jpg" target="_blank" rel="noopener">
               <img src="https://i.postimg.cc/jS9NbfrB/214850926-presentation-of-mens-clothing-in-a-luxury-boutique-in-a-shopping-center-original-product.jpg" alt="">
                 </a>
            </div>
           
           <div class="img-wrapper">
-                <a href="https://altphotos.com/photo/street-scene-with-pedestrians-and-dogs-318/" target="_blank" rel="noopener">
+                <a href="https://i.postimg.cc/Y2st8zfc/Home-5.png" target="_blank" rel="noopener">
               <img src="https://i.postimg.cc/Y2st8zfc/Home-5.png" alt="">
             </a>
           </div>
           
           <div class="img-wrapper slower">
-             <a href="https://altphotos.com/photo/tourist-barge-on-the-river-seine-near-notre-dame-266/" target="_blank" rel="noopener">
+             <a href="https://i.postimg.cc/VLZ4Jd8W/Home-3.png" target="_blank" rel="noopener">
               <img src="https://i.postimg.cc/VLZ4Jd8W/Home-3.png" alt="">
             </a>
           </div>
           
           <div class="img-wrapper slower last">
-             <a href="https://altphotos.com/photo/skulls-decoration-in-a-shop-window-331/" target="_blank" rel="noopener">
+             <a href="https://i.postimg.cc/sX2vGDy5/istockphoto-111957093-612x612.jpg" target="_blank" rel="noopener">
                <img src="https://i.postimg.cc/sX2vGDy5/istockphoto-111957093-612x612.jpg" alt="">
             </a>
           </div>
@@ -118,7 +119,7 @@
         <div class="main">
           <section class="product">
             <h2 class="product-category">Men's Latest</h2>
-            <span>Discover the epitome of style and sophistication with 12 𝓕𝓸𝔁, your premier destination for the latest trends in men's fashion.</span>
+            <span class="subtit">Discover the epitome of style and sophistication with 12 𝓕𝓸𝔁, your premier destination for the latest trends in men's fashion.</span>
         
           <ul class="cards">
           <li class="cards_item">
@@ -145,15 +146,14 @@
           <li class="cards_item">
             <div class="glassBox">
               <div class="glassBox__imgBox">
-                <img src="https://i.postimg.cc/9z39mzFB/men1-removebg-preview-2.png" alt="">
+                <img src="https://i.postimg.cc/FFfm5D9y/men1-removebg-preview.png" alt="">
                 
                 
               </div>
-              <h3 class="glassBox__title">Urban Fox Streetwear Tee</h3>
-              <div class="glassBox__content"> Rule the streets with the Urban Fox Tee.</div>
+              <h3 class="glassBox__title">Urban Fox Street Tee</h3>
+              <div class="glassBox__content"> Rule the streets with the Urban Fox Tee  that effortlessly combines comfort and urban edge.</div>
               <div class="glassBox__price">
                       <span class="product-price">₹399</span>
-                      
               </div>
               <div class="glassBox__Button">
                 <a href="https://lukkaartsandcrafts.myinstamojo.com/product/4578923/hi-i-am-a-shirt-de769/" data-store-name="lukkaartsandcrafts" data-domain="https://lukkaartsandcrafts.myinstamojo.com" data-id="4578923" rel="im-new-checkout" data-text="BUY" data-css-style="width:180px; border-radius:4px"   data-layout="vertical"  ></a>
@@ -253,7 +253,7 @@
         <div class="main">
           <section class="product">
             <h2 class="product-category">Women's Latest</h2>
-            <span>Discover a captivating array of women's clothing that effortlessly combines chic aesthetics with versatile functionality. </span>
+            <span class="subtit">Discover a captivating array of women's clothing that effortlessly combines chic aesthetics with versatile functionality. </span>
         
           <ul class="cards">
           <li class="cards_item">
@@ -387,7 +387,7 @@
         <div class="main">
           <section class="product">
             <h2 class="product-category">Kid's Latest</h2>
-            <span>Discover our delightful 12for Kids is the go-to destination for parents who love to dress their children in the latest fashion trends.</span>
+            <span class="subtit">Discover our delightful 12for Kids is the go-to destination for parents who love to dress their children in the latest fashion trends.</span>
         
           <ul class="cards">
           <li class="cards_item">
