added contact table in app.py

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -80,7 +80,8 @@
             <!-- Reach -->
             <div class="column right">
               <div class="text">Message me</div>
-              <form action="https://formsubmit.co/dev.vishvamv@gmail.com" method="POST">
+              <p style="text-align:center;color:white">{{ msg }}</p>
+              <form action="/contact1" method="POST">
                 <div class="fields">
                   <div class="field name">
                     <input type="text" name="username" placeholder="Your Name" required>
@@ -97,11 +98,8 @@
                 </div>
                 <div class="button-area">
                   <button type="submit">Send message</button>
-                  <input type="hidden" name="_next" value="https://">
                   
                 </div>
-                <input type="hidden" name="_autoresponse" value="Thanks for filling in 12Fox!!.
-                Here's what was received.">
               </form>
             </div>
           </div>
