--- a/templates/contact.html
+++ b/templates/contact.html
@@ -18,8 +18,7 @@
         <a href="#" class="logo">12 𝓕𝓸𝔁</a>
         <ul class="nav-links">
           <i class="uil uil-times navCloseBtn"></i>
-          <li><a href="{{url_for('base')}}">Home</a></li>
-          <li><a href="{{url_for('base')}}">Shop</a></li>
+          <li><a href="{{url_for('home')}}">Home</a></li>
           <li><a href="#contact">Contact Us</a></li>
           
         </ul>
@@ -117,10 +116,10 @@
           </div>
           <div class="middle box">
             <div class="topic">Shopping &amp; Categories</div>
-            <div><a href="{{url_for('base')}}">Men’s Shopping</a></div>
-            <div><a href="{{url_for('base')}}">Women’s Shopping</a></div>
-            <div><a href="{{url_for('base')}}">kid’s Shopping</a></div>
-            <div><a href="{{url_for('base')}}">Latest Products</a></div>
+            <div><a href="{{url_for('home')}}">Men’s Shopping</a></div>
+            <div><a href="{{url_for('home')}}">Women’s Shopping</a></div>
+            <div><a href="{{url_for('home')}}">kid’s Shopping</a></div>
+            <div><a href="{{url_for('home')}}">Latest Products</a></div>
             
           </div>
           <div class="right box">
