--- a/templates/reg.html
+++ b/templates/reg.html
@@ -20,7 +20,7 @@
           <i class="uil uil-times navCloseBtn"></i>
           <li><a href="#">Home</a></li>
           <li><a href="#">Shop</a></li>
-          <li><a href="{{url_for('contact')}}">Contact Us</a></li>
+          <li><a href="{{url_for('login')}}">Contact Us</a></li>
           
         </ul>
         <i class="uil uil-search search-icon" id="searchIcon"></i>
