--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         <a href="#" class="logo">12 𝓕𝓸𝔁</a>
         <ul class="nav-links">
           <i class="uil uil-times navCloseBtn"></i>
-          <li><a href="{{url_for('base')}}">Home</a></li>
+          <li><a href="{{url_for('home')}}">Home</a></li>
           <li><a href="#men">Men's</a></li>
           <li><a href="#women">Women's</a></li>
           <li><a href="#kids">Kid's</a></li>
